<resources>
    <string name="app_name">AntojosApp</string>
    <string name="inicio">Home</string>

    <!-- Inicio sesion -->
    <string name="correo">E-mail</string>
    <string name="password">Password</string>
    <string name="ingresar">Login</string>
    <string name="recuperar">Forgot password?</string>
    <string name="registrar">Create acount</string>

    <!--Registro de usuario-->
    <string name="nombre">Name</string>
    <string name="apellidos">Last name</string>
    <string name="telefono">Phone number</string>
    <string name="repite">Repeat password</string>
    <string name="registrar_usuario">Create account</string>
    <string name="title_activity_pirncipal">Pirncipal</string>

    <!-- Fragmento Inicio -->
    <string name="ubicacion">Location</string>

    <!-- Card negocio -->
    <string name="negocio">Business</string>
    <string name="categoria">Category</string>
    <string name="envios">Shipping type</string>

    <!-- Card platillo -->
    <string name="platillo">Name of the saucer</string>
    <string name="precio">$ 0.00</string>

    <!-- Fragmento categorias -->
    <string name="restaurante">Restaurant</string>
    <string name="buffet">Buffet</string>
    <string name="saludable">Healthy</string>
    <string name="mariscos">Seafood</string>
    <string name="cortes">Meat cuts</string>
    <string name="callejera">Street food</string>
    <string name="rapida">Fast food</string>
    <string name="tematico">Theme restaurant</string>
    <string name="regional">Regional</string>
    <string name="asiatico">Asian</string>
    <string name="europeo">European food</string>
    <string name="sudamericano">South american</string>
    <string name="africano"></string>
    <string name="pizza">Pizza</string>
    <string name="taquerias">Tacos</string>
    <string name="bar">Bar and pub</string>
    <string name="nocturno">Night</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navi">Hello blank fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">ActivityPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>