<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home_30"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/restaurant_30"
            android:title="@string/categoria" />

        <item
            android:id="@+id/nav_tercero"
            android:icon="@drawable/candado_30"
            android:title="tercero" />
    </group>


    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_extra"
                    android:icon="@drawable/correo_30"
                    android:title="Extra" />
            </group>

        </menu>
    </item>


    <item
        android:id="@+id/nav_extra2"
        android:icon="@drawable/telefono_30"
        android:title="Extra2" />

</menu>