<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_rojo"
    tools:context=".UsuarioRegistro">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/correo_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/persona_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/persona_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/telefono_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/candado_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/candado_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/repite"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/registrar_usuario"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="18sp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.261" />

</androidx.constraintlayout.widget.ConstraintLayout>