<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_rojo"
    tools:context=".InicioSesion">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/correo_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/candado_30"
            android:drawablePadding="10dp"
            android:drawableTint="@color/orange"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iniciar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="40dp"
            android:text="@string/ingresar"
            android:textSize="18sp"
            app:backgroundTint="@color/orange"
            app:cornerRadius="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/recuperar"
            android:textColor="@color/white"
            android:textColorLink="@color/orange"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/registrar"
        android:textSize="18sp"
        app:backgroundTint="@color/purple_200"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>