<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/negocio_logo"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginEnd="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/negocio_nombre"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:gravity="center_vertical"
            android:text="@string/negocio"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/negocio_tipo"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:gravity="center_vertical"
            android:text="@string/categoria"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/negocio_envio"
            android:layout_width="150dp"
            android:layout_height="20sp"
            android:gravity="center"
            android:text="@string/envios"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bordes_envio"
            />
    </LinearLayout>

</LinearLayout>